fix: overflowing box shadow for media plyer

--- a/src/App.css
+++ b/src/App.css
@@ -678,7 +678,7 @@ body {
     border-radius: 12px;
     overflow: hidden;
     background: rgba(255, 255, 255, 0.05);
-    box-shadow: 0 12px 35px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
     border: 0.5px solid rgba(255, 255, 255, 0.1);
 }
 
